@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-02
+2013-02-07 Andy Salnikov
+- reduce volume of generated code by using template classes/functions
+
 Tag: V00-05-01
 2013-02-06 Andy Salnikov
 - removed _import_array() from generated code
